--- a/themes/orange/css/style-login.css
+++ b/themes/orange/css/style-login.css
@@ -7,7 +7,7 @@
     -webkit-box-sizing: border-box;
 }*/
 body{
-    background-image: url("../pictures/PageLogin.png");
+    background-image: url("../pictures/PageLogin.jpg");
     background-position: center;
 }
 .headerlogin{
